[package]
name = "kitt_throbbler"
version = "0.1.3"
edition = "2021"
description = "A Knight Rider style LED animation for terminal output"
authors = ["Enzo Lombardi <enzinol@gmail.com>"]
license = "MIT"
documentation = "https://docs.rs/kitt_throbbler"
homepage = "https://github.com/aovestdipaperino/kitt-throbbler"
repository = "https://github.com/aovestdipaperino/kitt-throbbler"
readme = "README.md"

[dependencies]
tokio = { version = "1", features = ["time", "macros", "rt-multi-thread"] }
